youtube init backend

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,20 @@ dependencies {
 	compile group: 'org.springframework', name: 'spring-context', version: '5.3.3'
 
 
+	// https://mvnrepository.com/artifact/com.google.api-client/google-api-client
+	compile group: 'com.google.api-client', name: 'google-api-client', version: '1.31.2'
+	// https://mvnrepository.com/artifact/com.google.apis/google-api-services-youtube
+	compile group: 'com.google.apis', name: 'google-api-services-youtube', version: 'v3-rev222-1.25.0'
+	// https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client-jetty
+	compile group: 'com.google.oauth-client', name: 'google-oauth-client-jetty', version: '1.31.4'
+	compile('com.google.oauth-client:google-oauth-client-jetty:1.31.4') {
+		exclude group: 'org.mortbay.jetty', module: 'servlet-api'
+	}
+	// https://mvnrepository.com/artifact/com.google.http-client/google-http-client
+	compile group: 'com.google.http-client', name: 'google-http-client-jackson2', version: '1.38.1'
+	// https://mvnrepository.com/artifact/com.google.collections/google-collections
+	compile group: 'com.google.collections', name: 'google-collections', version: '1.0'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
